[package]
name = "ellama"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.27", features = ["persistence"] }
egui_commonmark = { git = "https://github.com/lampsitter/egui_commonmark.git", features = ["better_syntax_highlighting"] }
env_logger = "0.11"
flowync = { version = "5.1", features = ["compact"] }
log = "0.4.21"
ollama-rs = { git = "https://github.com/pepperoni21/ollama-rs.git", features = ["rustls", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
egui-modal = { git = "https://github.com/zeozeozeo/egui-modal.git", branch = "forget-state" }
tts = "0.26"
parking_lot = "0.12"
bytesize = "1.3"
timeago = { version = "0.4", default-features = false, features = ["chrono"] }
chrono = { version = "0.4", features = ["serde"] }
egui_virtual_list = "0.3.0"
serde = { version = "1", features = ["derive"] }
rfd = { version = "0.14", default-features = false, features = ["tokio", "xdg-portal"] }
anyhow = "1"
serde_json = "1"
