[package]
name = "ellama"
description = "Friendly interface to chat with an Ollama instance."
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
exclude = ["media/**"]
documentation = "https://docs.rs/ellama"
categories = ["visualization", "gui"]
keywords = ["llama", "ollama", "llm", "ai", "egui", "gui", "ui"]
homepage = "https://github.com/zeozeozeo/ellama"
repository = "https://github.com/zeozeozeo/ellama"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.27", default-features = false, features = ["persistence", "x11", "wayland", "accesskit", "glow"] }
egui_commonmark = { git = "https://github.com/zeozeozeo/egui_commonmark.git", branch = "twemoji", features = ["better_syntax_highlighting", "svg"] }
env_logger = "0.11"
flowync = { version = "5.1", features = ["compact"] }
log = "0.4.21"
ollama-rs = { git = "https://github.com/pepperoni21/ollama-rs", features = ["rustls", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
egui-modal = "0.3.6"
tts = "0.26"
parking_lot = "0.12"
bytesize = "1.3"
timeago = { version = "0.4", default-features = false, features = ["chrono"] }
chrono = { version = "0.4", features = ["serde"] }
egui_virtual_list = "0.3.0"
serde = { version = "1", features = ["derive"] }
rfd = { version = "0.14", default-features = false, features = ["tokio", "xdg-portal"] }
anyhow = "1"
serde_json = "1"
egui-notify = "0.14.0"
ron = "0.8.1"
fastrand = "2.1.0"
egui-twemoji = "0.3.0"
image = "0.24"
egui_extras = { version = "0.27.2", features = ["file", "image"] }
base64-stream = "4.0"
url = "2"

[features]
default = []
tts = []
