[package]
name = "ellama"
description = "Friendly interface to chat with an Ollama instance."
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
exclude = ["media/**"]
documentation = "https://docs.rs/ellama"
categories = ["visualization", "gui"]
keywords = ["llama", "ollama", "llm", "ai", "egui", "gui", "ui"]
homepage = "https://github.com/zeozeozeo/ellama"
repository = "https://github.com/zeozeozeo/ellama"

[dependencies]
eframe = { version = "0.31.1", default-features = false, features = [
    "persistence",
    "x11",
    "wayland",
    "accesskit",
    "glow",
] }
egui_commonmark = { git = "https://github.com/zeozeozeo/egui_commonmark.git", branch = "twemoji", features = [
    "twemoji",
    "better_syntax_highlighting",
    "svg",
] }
env_logger = "0.11"
flowync = { version = "5.1", features = ["compact"] }
log = "0.4.27"
ollama-rs = { version = "0.3.1", features = ["rustls", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
egui-modal = { git = "https://github.com/zeozeozeo/egui-modal.git", branch = "egui-0.31" }
tts = { version = "0.26.3", optional = true }
parking_lot = { version = "0.12", optional = true }
bytesize = "2.0.1"
timeago = { version = "0.4", default-features = false, features = ["chrono"] }
chrono = { version = "0.4", features = ["serde"] }
egui_virtual_list = "0.7.0"
serde = { version = "1", features = ["derive"] }
rfd = { version = "0.15.3", default-features = false, features = [
    "tokio",
    "xdg-portal",
] }
anyhow = "1"
serde_json = "1"
egui-notify = "0.19.0"
ron = "0.10.1"
fastrand = "2.3.0"
egui-twemoji = "0.7.0"
image = "0.25.6"
egui_extras = { version = "0.31.1", features = ["file", "image"] }
base64-stream = "4.0"
url = "2"

[features]
default = ["tts"]
tts = ["parking_lot", "dep:tts"]
